Fixed bug with context-path after upgrade to spring-boot 2.0 #683

--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 # server.port=8080
 
 spring.application.name=${rootArtifactId}
-server.context-path=/
+server.servlet.context-path=/
 
 security.expose.error.details=false
 security.cors.enabled=false
