--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
@@ -6,7 +6,7 @@
 # the config folder inside the WEB-INF/classes folder of the webapplication.
 
 server.port=8081
-server.context-path=/
+server.servlet.context-path=/
 
 # Datasource for accessing the database
 # See https://github.com/oasp/oasp4j/wiki/guide-configuration#security
